--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 					<div class="seven-3 ab ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
 						<img src="img/seven-3.png">
 					</div>
-					
+					<div  ></div >
 				</div>
-
+				
 			</div>
 		</div>
 
